[gd_scene load_steps=6 format=3 uid="uid://basignfhlf7dv"]

[ext_resource type="Script" path="res://GameUI/GameUIOptions.gd" id="1_viror"]
[ext_resource type="Texture2D" uid="uid://yij5k076eseo" path="res://_assets/GameUIOptions/home/home-button.png" id="2_1sud0"]
[ext_resource type="Texture2D" uid="uid://c41qaaw452hsb" path="res://_assets/GameUIOptions/home/home-button-pressed.png" id="3_m1lmj"]
[ext_resource type="Texture2D" uid="uid://dad36l5gfjp31" path="res://_assets/GameUIOptions/reset/reset-button.png" id="4_3p1mb"]
[ext_resource type="Texture2D" uid="uid://b7gmv5jafiqhb" path="res://_assets/GameUIOptions/reset/reset-button-pressed.png" id="5_onqof"]

[node name="GameUIOptions" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_viror")

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
scale = Vector2(0.125, 0.125)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 132.0
grow_horizontal = 0

[node name="HomeButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_1sud0")
texture_pressed = ExtResource("3_m1lmj")

[node name="ResetButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_3p1mb")
texture_pressed = ExtResource("5_onqof")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="Control/VBoxContainer/HomeButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="Control/VBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/ResetButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="Control/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
